--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rcutils
-	previous = 
-	base = 807737f
+	previous = 807737f
+	base = fdbcb5d
 	trim = 
 	trimbase = 
