--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcutils
-	previous = 
-	base = 9618ad1
+	previous = 9618ad1
+	base = df46ffc
 	trim = 
 	trimbase = 
