--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rcutils
-	previous = 
-	base = 94436ee
+	previous = 94436ee
+	base = ec20a06
 	trim = 
 	trimbase = 
