--- a/tracks.yaml
+++ b/tracks.yaml
@@ -301,5 +301,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros2/rcutils.git
-    version: 6.5.2
-    version_saved: :{auto}
+    version: :{auto}
